rushed 1.21.10 update