@@ -4,15 +4,15 @@ import net.kyori.adventure.text.Component;
 import net.minestom.server.entity.EquipmentSlot;
 import net.minestom.server.entity.PlayerHand;
 import net.minestom.server.inventory.InventoryType;
+import net.minestom.server.inventory.click.Click;
+import net.minestom.server.inventory.click.ClickPreprocessor;
 import net.minestom.server.item.ItemStack;
 import net.minestom.server.network.packet.client.play.*;
 import net.minestom.server.network.packet.server.ServerPacket;
-import net.minestom.server.network.packet.server.play.CloseWindowPacket;
-import net.minestom.server.network.packet.server.play.EntityEquipmentPacket;
-import net.minestom.server.network.packet.server.play.OpenWindowPacket;
-import net.minestom.server.network.packet.server.play.WindowItemsPacket;
+import net.minestom.server.network.packet.server.play.*;
 import net.minestom.server.utils.inventory.PlayerInventoryUtils;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -30,6 +30,7 @@ public final class InventoryHolder {
     private int heldSlot;
 
     private Container openContainer;
+    private final ClickPreprocessor clickPreprocessor = new ClickPreprocessor();
 
     public InventoryHolder(int entityId, Consumer<ServerPacket.Play> selfConsumer,
                            Consumer<ServerPacket.Play> localBroadcastConsumer) {
@@ -86,6 +87,7 @@ public final class InventoryHolder {
 
     public void consumeItem(int slot) {
         ItemStack current = inventory[slot];
+        if (current.isAir()) return;
         final ItemStack updated = current.withAmount(current.amount() - 1);
         this.inventory[slot] = updated;
     }
@@ -98,7 +100,7 @@ public final class InventoryHolder {
     public WindowItemsPacket itemsPacket() {
         List<ItemStack> items = new ArrayList<>();
         for (int i = 0; i < inventory.length; i++) {
-            final int internalSlot = PlayerInventoryUtils.convertPlayerInventorySlot(i, PlayerInventoryUtils.OFFSET);
+            final int internalSlot = PlayerInventoryUtils.convertWindow0SlotToMinestomSlot(i);
             items.add(inventory[internalSlot]);
         }
         return new WindowItemsPacket((byte) 0, 0, items, cursor);
@@ -114,40 +116,352 @@ public final class InventoryHolder {
     }
 
     public void consume(ClientClickWindowPacket packet) {
-        final List<ClientClickWindowPacket.ChangedSlot> changedSlots = packet.changedSlots();
-        Container openContainer = this.openContainer;
-        boolean updateContainer = false;
-        for (ClientClickWindowPacket.ChangedSlot changedSlot : changedSlots) {
-            final int protocolSlot = changedSlot.slot();
-            if (openContainer != null) {
-                // Has container open
-                final int containerSize = openContainer.type.getSize();
-                if (protocolSlot < containerSize) {
-                    // Click in container
-                    openContainer.inventory[protocolSlot] = changedSlot.item();
-                    updateContainer = true;
-                } else {
-                    // Click in player inventory
-                    final int internalSlot = PlayerInventoryUtils.convertSlot(protocolSlot, containerSize);
-                    this.inventory[internalSlot] = changedSlot.item();
-                }
-            } else {
-                // No container open
-                final int internalSlot = PlayerInventoryUtils.convertPlayerInventorySlot(protocolSlot, PlayerInventoryUtils.OFFSET);
-                this.inventory[internalSlot] = changedSlot.item();
-                if (isEquipmentSlot(internalSlot)) {
-                    this.localBroadcastConsumer.accept(equipmentPacket());
-                }
-            }
-        }
-        this.cursor = packet.clickedItem();
+        final int windowId = packet.windowId();
+        final Container container = this.openContainer;
+        final Integer containerSize;
 
-        if (updateContainer) {
-            for (InventoryHolder viewer : openContainer.viewers) {
-                if (viewer == this) continue;
-                viewer.selfConsumer.accept(openContainer.itemsPacket(viewer.cursor));
+        if (windowId == 0) {
+            containerSize = null;
+        } else {
+            if (container == null) return;
+            if ((container.id & 0xFF) != windowId) return;
+            containerSize = container.type.getSize();
+        }
+
+        Click click = clickPreprocessor.processClick(packet, containerSize);
+        if (click == null) return;
+
+        boolean equipmentChanged = handleClick(click, containerSize);
+
+        if (equipmentChanged) {
+            localBroadcastConsumer.accept(equipmentPacket());
+        }
+
+        if (container != null) {
+            for (InventoryHolder viewer : container.viewers) {
+                viewer.selfConsumer.accept(container.itemsPacket(viewer.inventory, viewer.cursor));
             }
         }
+
+        if (!ItemStack.Hash.of(cursor).equals(packet.clickedItem())) {
+            selfConsumer.accept(new SetCursorItemPacket(cursor));
+        }
+    }
+    private boolean handleClick(Click click, @Nullable Integer containerSize) {
+        return switch (click) {
+            case Click.Left(int slot) -> handleLeft(slot, containerSize);
+            case Click.Right(int slot) -> handleRight(slot, containerSize);
+            case Click.Middle(int slot) -> handleMiddle(slot, containerSize);
+            case Click.LeftShift(int slot) -> handleShift(slot, containerSize);
+            case Click.RightShift(int slot) -> handleShift(slot, containerSize);
+            case Click.Double(int slot) -> handleDouble(slot, containerSize);
+            case Click.LeftDrag(List<Integer> slots) -> handleLeftDrag(slots, containerSize);
+            case Click.RightDrag(List<Integer> slots) -> handleRightDrag(slots, containerSize);
+            case Click.MiddleDrag(List<Integer> slots) -> handleMiddleDrag(slots, containerSize);
+            case Click.LeftDropCursor() -> { handleLeftDropCursor(); yield false; }
+            case Click.RightDropCursor() -> { handleRightDropCursor(); yield false; }
+            case Click.MiddleDropCursor() -> false;
+            case Click.DropSlot(int slot, boolean all) -> handleDropSlot(slot, all, containerSize);
+            case Click.HotbarSwap(int hotbarSlot, int slot) -> handleHotbarSwap(hotbarSlot, slot, containerSize);
+            case Click.OffhandSwap(int slot) -> handleOffhandSwap(slot, containerSize);
+        };
+    }
+
+    private ItemStack getClickedItem(int slot, @Nullable Integer containerSize) {
+        if (containerSize != null && slot < containerSize) {
+            return openContainer.inventory[slot];
+        } else {
+            int playerSlot = containerSize != null ? slot - containerSize : slot;
+            return inventory[playerSlot];
+        }
+    }
+
+    private void setClickedItem(int slot, @Nullable Integer containerSize, ItemStack item) {
+        if (containerSize != null && slot < containerSize) {
+            openContainer.inventory[slot] = item;
+        } else {
+            int playerSlot = containerSize != null ? slot - containerSize : slot;
+            inventory[playerSlot] = item;
+        }
+    }
+
+    private boolean isPlayerEquipmentSlot(int slot, @Nullable Integer containerSize) {
+        if (containerSize != null && slot < containerSize) return false;
+        int playerSlot = containerSize != null ? slot - containerSize : slot;
+        return isEquipmentSlot(playerSlot);
+    }
+
+    private boolean handleLeft(int slot, @Nullable Integer containerSize) {
+        ItemStack clicked = getClickedItem(slot, containerSize);
+        ItemStack cursorItem = this.cursor;
+
+        if (cursorItem.isAir()) {
+            this.cursor = clicked;
+            setClickedItem(slot, containerSize, ItemStack.AIR);
+        } else if (clicked.isAir()) {
+            setClickedItem(slot, containerSize, cursorItem);
+            this.cursor = ItemStack.AIR;
+        } else if (cursorItem.isSimilar(clicked)) {
+            int total = cursorItem.amount() + clicked.amount();
+            int max = clicked.maxStackSize();
+            if (total <= max) {
+                setClickedItem(slot, containerSize, clicked.withAmount(total));
+                this.cursor = ItemStack.AIR;
+            } else {
+                setClickedItem(slot, containerSize, clicked.withAmount(max));
+                this.cursor = cursorItem.withAmount(total - max);
+            }
+        } else {
+            setClickedItem(slot, containerSize, cursorItem);
+            this.cursor = clicked;
+        }
+
+        return isPlayerEquipmentSlot(slot, containerSize);
+    }
+
+    private boolean handleRight(int slot, @Nullable Integer containerSize) {
+        ItemStack clicked = getClickedItem(slot, containerSize);
+        ItemStack cursorItem = this.cursor;
+
+        if (cursorItem.isAir()) {
+            if (!clicked.isAir()) {
+                int half = (clicked.amount() + 1) / 2;
+                this.cursor = clicked.withAmount(half);
+                setClickedItem(slot, containerSize, clicked.withAmount(clicked.amount() - half));
+            }
+        } else {
+            if (clicked.isAir()) {
+                setClickedItem(slot, containerSize, cursorItem.withAmount(1));
+                this.cursor = cursorItem.withAmount(cursorItem.amount() - 1);
+            } else if (cursorItem.isSimilar(clicked) && clicked.amount() < clicked.maxStackSize()) {
+                setClickedItem(slot, containerSize, clicked.withAmount(clicked.amount() + 1));
+                this.cursor = cursorItem.withAmount(cursorItem.amount() - 1);
+            } else if (!cursorItem.isSimilar(clicked)) {
+                setClickedItem(slot, containerSize, cursorItem);
+                this.cursor = clicked;
+            }
+        }
+
+        return isPlayerEquipmentSlot(slot, containerSize);
+    }
+
+    private boolean handleMiddle(int slot, @Nullable Integer containerSize) {
+        if (!cursor.isAir()) return false;
+        ItemStack clicked = getClickedItem(slot, containerSize);
+        if (!clicked.isAir()) {
+            this.cursor = clicked.withAmount(clicked.maxStackSize());
+        }
+        return false;
+    }
+
+    private boolean handleShift(int slot, @Nullable Integer containerSize) {
+        ItemStack clicked = getClickedItem(slot, containerSize);
+        if (clicked.isAir()) return false;
+
+        boolean equipmentChanged;
+
+        if (containerSize != null) {
+            if (slot < containerSize) {
+                ItemStack remaining = addToPlayerInventory(clicked, 0, 36);
+                setClickedItem(slot, containerSize, remaining);
+                equipmentChanged = true;
+            } else {
+                ItemStack remaining = addToContainer(clicked);
+                setClickedItem(slot, containerSize, remaining);
+                equipmentChanged = isPlayerEquipmentSlot(slot, containerSize);
+            }
+        } else {
+            int playerSlot = slot;
+            boolean inHotbar = playerSlot < 9;
+            ItemStack remaining = addToPlayerInventory(clicked, inHotbar ? 9 : 0, inHotbar ? 36 : 9);
+            setClickedItem(slot, containerSize, remaining);
+            equipmentChanged = isEquipmentSlot(playerSlot);
+        }
+
+        return equipmentChanged;
+    }
+
+    private ItemStack addToPlayerInventory(ItemStack item, int start, int end) {
+        int amount = item.amount();
+        for (int i = start; i < end && amount > 0; i++) {
+            ItemStack existing = inventory[i];
+            if (existing.isSimilar(item) && existing.amount() < existing.maxStackSize()) {
+                int space = existing.maxStackSize() - existing.amount();
+                int toAdd = Math.min(space, amount);
+                inventory[i] = existing.withAmount(existing.amount() + toAdd);
+                amount -= toAdd;
+            }
+        }
+        for (int i = start; i < end && amount > 0; i++) {
+            if (inventory[i].isAir()) {
+                int toAdd = Math.min(item.maxStackSize(), amount);
+                inventory[i] = item.withAmount(toAdd);
+                amount -= toAdd;
+            }
+        }
+        return amount > 0 ? item.withAmount(amount) : ItemStack.AIR;
+    }
+
+    private ItemStack addToContainer(ItemStack item) {
+        if (openContainer == null) return item;
+        ItemStack[] containerInv = openContainer.inventory;
+        int amount = item.amount();
+        for (int i = 0; i < containerInv.length && amount > 0; i++) {
+            ItemStack existing = containerInv[i];
+            if (existing.isSimilar(item) && existing.amount() < existing.maxStackSize()) {
+                int space = existing.maxStackSize() - existing.amount();
+                int toAdd = Math.min(space, amount);
+                containerInv[i] = existing.withAmount(existing.amount() + toAdd);
+                amount -= toAdd;
+            }
+        }
+        for (int i = 0; i < containerInv.length && amount > 0; i++) {
+            if (containerInv[i].isAir()) {
+                int toAdd = Math.min(item.maxStackSize(), amount);
+                containerInv[i] = item.withAmount(toAdd);
+                amount -= toAdd;
+            }
+        }
+        return amount > 0 ? item.withAmount(amount) : ItemStack.AIR;
+    }
+
+    private boolean handleDouble(int slot, @Nullable Integer containerSize) {
+        if (cursor.isAir()) return false;
+
+        int maxStack = cursor.maxStackSize();
+        int amount = cursor.amount();
+        boolean equipmentChanged = false;
+
+        for (int i = 0; i < 36 && amount < maxStack; i++) {
+            if (inventory[i].isSimilar(cursor)) {
+                int toTake = Math.min(inventory[i].amount(), maxStack - amount);
+                inventory[i] = inventory[i].withAmount(inventory[i].amount() - toTake);
+                amount += toTake;
+                if (isEquipmentSlot(i)) equipmentChanged = true;
+            }
+        }
+
+        if (openContainer != null) {
+            ItemStack[] containerInv = openContainer.inventory;
+            for (int i = 0; i < containerInv.length && amount < maxStack; i++) {
+                if (containerInv[i].isSimilar(cursor)) {
+                    int toTake = Math.min(containerInv[i].amount(), maxStack - amount);
+                    containerInv[i] = containerInv[i].withAmount(containerInv[i].amount() - toTake);
+                    amount += toTake;
+                }
+            }
+        }
+
+        this.cursor = cursor.withAmount(amount);
+        return equipmentChanged;
+    }
+
+    private boolean handleLeftDrag(List<Integer> slots, @Nullable Integer containerSize) {
+        if (cursor.isAir() || slots.isEmpty()) return false;
+
+        int totalAmount = cursor.amount();
+        int perSlot = totalAmount / slots.size();
+        if (perSlot == 0) return false;
+
+        boolean equipmentChanged = false;
+        int remaining = totalAmount;
+
+        for (int slot : slots) {
+            ItemStack existing = getClickedItem(slot, containerSize);
+            if (existing.isAir() || existing.isSimilar(cursor)) {
+                int currentAmount = existing.isAir() ? 0 : existing.amount();
+                int maxStack = cursor.maxStackSize();
+                int canAdd = Math.min(perSlot, maxStack - currentAmount);
+                if (canAdd > 0) {
+                    setClickedItem(slot, containerSize, cursor.withAmount(currentAmount + canAdd));
+                    remaining -= canAdd;
+                    if (isPlayerEquipmentSlot(slot, containerSize)) equipmentChanged = true;
+                }
+            }
+        }
+
+        this.cursor = remaining > 0 ? cursor.withAmount(remaining) : ItemStack.AIR;
+        return equipmentChanged;
+    }
+
+    private boolean handleRightDrag(List<Integer> slots, @Nullable Integer containerSize) {
+        if (cursor.isAir() || slots.isEmpty()) return false;
+
+        boolean equipmentChanged = false;
+        int remaining = cursor.amount();
+
+        for (int slot : slots) {
+            if (remaining <= 0) break;
+            ItemStack existing = getClickedItem(slot, containerSize);
+            if (existing.isAir()) {
+                setClickedItem(slot, containerSize, cursor.withAmount(1));
+                remaining--;
+                if (isPlayerEquipmentSlot(slot, containerSize)) equipmentChanged = true;
+            } else if (existing.isSimilar(cursor) && existing.amount() < existing.maxStackSize()) {
+                setClickedItem(slot, containerSize, existing.withAmount(existing.amount() + 1));
+                remaining--;
+                if (isPlayerEquipmentSlot(slot, containerSize)) equipmentChanged = true;
+            }
+        }
+
+        this.cursor = remaining > 0 ? cursor.withAmount(remaining) : ItemStack.AIR;
+        return equipmentChanged;
+    }
+
+    private boolean handleMiddleDrag(List<Integer> slots, @Nullable Integer containerSize) {
+        if (cursor.isAir()) return false;
+
+        boolean equipmentChanged = false;
+        for (int slot : slots) {
+            ItemStack existing = getClickedItem(slot, containerSize);
+            if (existing.isAir()) {
+                setClickedItem(slot, containerSize, cursor.withAmount(cursor.maxStackSize()));
+                if (isPlayerEquipmentSlot(slot, containerSize)) equipmentChanged = true;
+            }
+        }
+        return equipmentChanged;
+    }
+
+    private void handleLeftDropCursor() {
+        this.cursor = ItemStack.AIR;
+    }
+
+    private void handleRightDropCursor() {
+        if (!cursor.isAir()) {
+            this.cursor = cursor.withAmount(cursor.amount() - 1);
+        }
+    }
+
+    private boolean handleDropSlot(int slot, boolean all, @Nullable Integer containerSize) {
+        ItemStack clicked = getClickedItem(slot, containerSize);
+        if (clicked.isAir()) return false;
+
+        if (all) {
+            setClickedItem(slot, containerSize, ItemStack.AIR);
+        } else {
+            setClickedItem(slot, containerSize, clicked.withAmount(clicked.amount() - 1));
+        }
+        return isPlayerEquipmentSlot(slot, containerSize);
+    }
+
+    private boolean handleHotbarSwap(int hotbarSlot, int slot, @Nullable Integer containerSize) {
+        ItemStack clicked = getClickedItem(slot, containerSize);
+        ItemStack hotbarItem = inventory[hotbarSlot];
+
+        setClickedItem(slot, containerSize, hotbarItem);
+        inventory[hotbarSlot] = clicked;
+
+        return hotbarSlot == heldSlot || isPlayerEquipmentSlot(slot, containerSize);
+    }
+
+    private boolean handleOffhandSwap(int slot, @Nullable Integer containerSize) {
+        ItemStack clicked = getClickedItem(slot, containerSize);
+        ItemStack offhandItem = inventory[PlayerInventoryUtils.OFFHAND_SLOT];
+
+        setClickedItem(slot, containerSize, offhandItem);
+        inventory[PlayerInventoryUtils.OFFHAND_SLOT] = clicked;
+
+        return true;
     }
 
     public void consume(ClientUseItemPacket packet) {
@@ -169,7 +483,7 @@ public final class InventoryHolder {
     }
 
     public void consume(ClientCreativeInventoryActionPacket packet) {
-        final int internalSlot = PlayerInventoryUtils.convertPlayerInventorySlot(packet.slot(), PlayerInventoryUtils.OFFSET);
+        final int internalSlot = PlayerInventoryUtils.convertWindow0SlotToMinestomSlot(packet.slot());
         if (internalSlot < 0) return;
         this.inventory[internalSlot] = packet.item();
         if (isEquipmentSlot(internalSlot)) {
@@ -178,6 +492,7 @@ public final class InventoryHolder {
     }
 
     public void consume(ClientCloseWindowPacket packet) {
+        clickPreprocessor.clearCache();
         Container openContainer = this.openContainer;
         if (openContainer != null) {
             openContainer.viewers.remove(this);
@@ -212,6 +527,7 @@ public final class InventoryHolder {
             case LEGGINGS -> PlayerInventoryUtils.LEGGINGS_SLOT;
             case BOOTS -> PlayerInventoryUtils.BOOTS_SLOT;
             case BODY -> equipmentSlot.armorSlot();
+            case SADDLE -> -1; // ?
         };
     }
 
@@ -220,7 +536,7 @@ public final class InventoryHolder {
         if (success) {
             this.openContainer = container;
             selfConsumer.accept(container.openPacket());
-            selfConsumer.accept(container.itemsPacket(cursor));
+            selfConsumer.accept(container.itemsPacket(this.inventory, cursor));
         }
         return success;
     }
@@ -230,6 +546,7 @@ public final class InventoryHolder {
     }
 
     public void closeContainer() {
+        clickPreprocessor.clearCache();
         var openContainer = this.openContainer;
         if (openContainer != null) {
             openContainer.viewers.remove(this);
@@ -286,7 +603,7 @@ public final class InventoryHolder {
 
     public static class Container {
         private static final AtomicInteger ID_GENERATOR = new AtomicInteger(1);
-        private final byte id = (byte) ID_GENERATOR.getAndIncrement();
+        private final byte id = (byte) ID_GENERATOR.getAndIncrement(); // collision?
         private final Component title;
         private final InventoryType type;
         private final Set<InventoryHolder> viewers = new HashSet<>();
@@ -304,8 +621,18 @@ public final class InventoryHolder {
             return new OpenWindowPacket(id, type.ordinal(), title);
         }
 
-        public WindowItemsPacket itemsPacket(ItemStack cursor) {
-            return new WindowItemsPacket(id, 0, List.of(inventory), cursor);
+        public WindowItemsPacket itemsPacket(ItemStack[] playerInventory, ItemStack cursor) {
+            int containerSize = type.getSize();
+            List<ItemStack> items = new ArrayList<>(containerSize + 36);
+
+            items.addAll(Arrays.asList(inventory));
+
+            for (int i = containerSize; i < containerSize + 36; i++) {
+                int minestomSlot = PlayerInventoryUtils.convertWindowSlotToMinestomSlot(i, containerSize);
+                items.add(playerInventory[minestomSlot]);
+            }
+
+            return new WindowItemsPacket(id & 0xFF, 0, items, cursor);
         }
 
         public byte id() {
